Fixes #25 - Implement 404 error page style | 404 is not centered

--- a/_assets/css/_error.scss
+++ b/_assets/css/_error.scss
@@ -10,6 +10,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    width: 100%;
     .header-error {
       h1 {
         @extend .black-text;
